--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Mario Loos
 description: Inspiring for Team Management, Team Coaching, Mediation
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/marioloos/marioloos.github.io/master/images/avatar.png
+avatar: https://raw.githubusercontent.com/marioloos/marioloos.github.io/master/images/jekyll-logo.jpg
 
 #
 # Flags below are optional
